manifest.json edited online with Bitbucket

--- a/setup/manifest.json
+++ b/setup/manifest.json
@@ -1,1 +1,37 @@
-hs
+{
+  "apiVersion": "apps/v1",
+  "kind": "Deployment",
+  "metadata": {
+    "name": "pacifico-app",
+    "labels": {
+      "app": "pacifico"
+    }
+  },
+  "spec": {
+    "selector": {
+      "matchLabels": {
+        "app": "pacifico"
+      }
+    },
+    "template": {
+      "metadata": {
+        "labels": {
+          "app": "pacifico"
+        }
+      },
+      "spec": {
+        "containers": [
+          {
+            "image": "fcuriel/pacifico:release-16",
+            "name": "pacifico",
+            "ports": [
+              {
+                "containerPort": 8080
+              }
+            ]
+          }
+        ]
+      }
+    }
+  }
+}
