deployment_certi.yaml edited online with Bitbucket

--- a/setup/deployment_certi.yaml
+++ b/setup/deployment_certi.yaml
@@ -14,7 +14,7 @@ spec:
         app: pacifico
     spec:
       containers:
-      - image: fcuriel/release-certificacion-<+pipeline.sequenceId>
+      - image: {{.Values.image}}
         name: pacifico
         ports:
         - containerPort: 8080
