--- a/setup/values.yaml
+++ b/setup/values.yaml
@@ -1,4 +1,5 @@
 name: harness-example
 replicas: 1
 
-image: <+artifact.image>
+#image: <+artifact.image>
+image: fcuriel/pacifico:release-certificacion-28
