--- a/setup/values.yaml
+++ b/setup/values.yaml
@@ -1,5 +1,5 @@
 name: harness-example
 replicas: 1
 
-#image: <+artifact.image>
-image: fcuriel/pacifico:release-certificacion-28
+image: <+artifact.image>
+#image: fcuriel/pacifico:release-certificacion-28
