Update pipeline Custom Demo

--- a/harness/.harness/Custom_Demo.yaml
+++ b/harness/.harness/Custom_Demo.yaml
@@ -36,6 +36,8 @@ pipeline:
                                         echo "Detectando tecnología..."
                                         echo "Propiedades de trigger:  "
 
+                                        echo "Repo de evento: <+eventPayload.name>"
+
                                         echo "tipo: <+trigger.type>"
                                         echo "Repo: <+trigger.sourceRepo>"
                                         echo "Evento: <+trigger.event>"
