Update pipeline Custom Demo

--- a/harness/.harness/Custom_Demo.yaml
+++ b/harness/.harness/Custom_Demo.yaml
@@ -59,6 +59,7 @@ pipeline:
                                         <+pipeline.variables.technology> = $trim
 
                                         echo "<+trigger.payload.repository.name>"
+                                    shell: Bash
     variables:
         - name: technology
           type: String
