--- a/harness/.harness/Custom_Demo.yaml
+++ b/harness/.harness/Custom_Demo.yaml
@@ -52,13 +52,18 @@ pipeline:
 
 
                                         tech=<+trigger.payload.repository.name>
-                                        trim=${tech%%-*}
-
+                                        trim=${tech%%_*}
                                         echo "trim: $trim"
 
-                                        <+pipeline.variables.technology>=$trim
+                                        export technology=${tech%%_*}
 
-                                        echo "<+trigger.payload.repository.name>"
+                                        #echo "trim: $technology"
+
+                                        #<+pipeline.variables.technology>=$trim
+
+                                        #echo "<+trigger.payload.repository.name>"
+                                    outputVariables:
+                                        - name: technology
                                     shell: Bash
     variables:
         - name: technology
