Update pipeline Google Cloud Storage

--- a/harness/.harness/Custom_Demo.yaml
+++ b/harness/.harness/Custom_Demo.yaml
@@ -1,5 +1,5 @@
 pipeline:
-    name: Custom Demo
+    name: Google Cloud Storage
     identifier: Custom_Demo
     allowStageExecutions: false
     projectIdentifier: Latam_Arilines
