--- a/app.yaml
+++ b/app.yaml
@@ -18,3 +18,13 @@ spec:
         name: latam
         ports:
         - containerPort: {{.Values.port}}
+        readinessProbe:
+          tcpSocket:
+            port: {{.Values.port}}
+          initialDelaySeconds: 60
+          periodSeconds: 10
+        livenessProbe:
+          tcpSocket:
+            port: {{.Values.port}}
+          initialDelaySeconds: 120
+          periodSeconds: 20
