--- a/setup/values.yaml
+++ b/setup/values.yaml
@@ -1,5 +1,6 @@
 name: harness-example
 replicas: 1
 
-image: <+artifact.image>
-#image: fcuriel/pacifico:release-certificacion-28
+image: nginx:1.14.2
+port: 8080
+tag: 39
