--- a/setup/deployment.yaml
+++ b/setup/deployment.yaml
@@ -1,20 +1,34 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: latam
+  labels:
+    app: latam
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 80
+  selector:
+    app: latam
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: pacifico-app
+  name: latam-gke
   labels:
-    app: pacifico
+    app: latam
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: pacifico
+      app: latam
   template:
     metadata:
       labels:
-        app: pacifico
+        app: latam
     spec:
       containers:
-      - image: fcuriel/pacifico:release-16
-        name: pacifico
+      - name: latam
+        image: nginx:1.14.2
         ports:
-        - containerPort: 8080
+        - containerPort: 80
